--- a/css/party.css
+++ b/css/party.css
@@ -9,7 +9,7 @@ p {
 	font-size: 12pt;font-family: "ＭＳ 明朝";
 }
 img {
-	width: 230px;
-	height: 230px;
+	width: 250px;
+	height: 188;
 	border: 0px;
 }
