--- a/css/party.css
+++ b/css/party.css
@@ -5,11 +5,45 @@ background-size:100%;
 h1 {
 	font-size: 25pt;font-family: "ＭＳ 明朝";
 }
-p {
-	font-size: 12pt;font-family: "ＭＳ 明朝";
+h2 {
+	font-size: 34pt;font-family: "ＭＳ 明朝";
 }
-img {
-	width: 250px;
-	height: 188;
-	border: 0px;
-}
+<style>
+    .container {
+        width: 600px;
+        margin: 0 auto;
+    }
+    .container img{
+        width: 250px;
+        height: 188px;
+        border: 0px;
+    }
+    #popup{
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        display: none;
+    }
+    #popup .bg{
+        background-color: rgba(0,0,0,0.5);
+        width: 100%;
+        height: 100%;
+    }
+    @media \0screen\,screen\9 {
+        #popup .bg{
+            background-color:#000000;
+            filter:Alpha(opacity=50);
+            position:static;
+        }
+        #popup .bg img{
+            position: relative;
+        }
+    }
+    #popup img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
