--- a/css/travel.css
+++ b/css/travel.css
@@ -8,8 +8,43 @@ h1 {
 p {
 	font-size: 12pt;font-family: "ＭＳ 明朝";
 }
-img {
-	width: 230px;
-	height: 230px;
-	border: 0px;
-}
+
+<style>
+    .container {
+        width: 600px;
+        margin: 0 auto;
+    }
+    .container img{
+        width: 300px;
+        height: 300px;
+        border: 0px;
+    }
+    #popup{
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        display: none;
+    }
+    #popup .bg{
+        background-color: rgba(0,0,0,0.5);
+        width: 100%;
+        height: 100%;
+    }
+    @media \0screen\,screen\9 {
+        #popup .bg{
+            background-color:#000000;
+            filter:Alpha(opacity=50);
+            position:static;
+        }
+        #popup .bg img{
+            position: relative;
+        }
+    }
+    #popup img{
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
